--- a/integration/build.gradle
+++ b/integration/build.gradle
@@ -9,7 +9,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.0-beta1'
+        classpath 'com.android.tools.build:gradle:2.2.3'
         classpath "com.getkeepsafe.dexcount:dexcount-gradle-plugin:$dexcountVersion"
 
         // NOTE: Do not place your application dependencies here; they belong
