--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,5 @@
 language: android
 
-android:
-  components:
-    - platform-tools
-    - tools
-    - build-tools-23.0.3
-    - android-23
-    - extra-google-m2repository
-    - extra-android-m2repository
-    - extra-android-support
-
 groovy:
   - 2.3.6
   - 2.3.9
@@ -17,7 +7,13 @@ groovy:
 jdk:
   - oraclejdk8
 
-install: true
+install:
+  - echo y | android update sdk -u -a -t tools
+  - echo y | android update sdk -u -a -t platform-tools
+  - echo y | android update sdk -u -a -t build-tools-25.0.2
+  - echo y | android update sdk -u -a -t android-25
+  - echo y | android update sdk -u -a -t extra-google-m2repository
+  - echo y | android update sdk -u -a -t extra-android-m2repository
 
 script:
   - ./.buildscript/test.sh
