Support Android Gradle Plugin 3.0.0+ (#166)
Instead of grabbing variant output from the assemble task, we can hook up to the package task and depend on that.

The wrinkle is that, in the new tools version, its output is a directory, as opposed to the prior version that yielded a single package file. The counter task is a little more complicated now, but things seem to work. Fingers crossed.

Fixes #161

--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ buildscript {
 
 repositories {
     maven { url "https://plugins.gradle.org/m2/" } // Mirrors jcenter() and mavenCentral()
+    maven { url "https://maven.google.com" }
 }
 
 jar {
@@ -48,7 +49,7 @@ jar {
 
 dependencies {
     compile gradleApi()
-    compile 'com.android.tools.build:gradle:2.3.0'
+    compile 'com.android.tools.build:gradle:3.0.0-alpha3'
     compile 'com.google.code.gson:gson:2.6.2'
 
     testCompile 'junit:junit:4.12'
