--- a/integration/build.gradle
+++ b/integration/build.gradle
@@ -6,10 +6,11 @@ buildscript {
     repositories {
         mavenLocal()
         mavenCentral()
+        maven { url "https://maven.google.com" }
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
+        classpath 'com.android.tools.build:gradle:3.0.0-alpha3'
         classpath "com.getkeepsafe.dexcount:dexcount-gradle-plugin:$dexcountVersion"
 
         // NOTE: Do not place your application dependencies here; they belong
