--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 GROUP=com.getkeepsafe.dexcount
-VERSION_NAME=0.7.1-SNAPSHOT
+VERSION_NAME=0.7.1
 
 POM_ARTIFACT_ID=dexcount-gradle-plugin
 POM_NAME=Dexcount Gradle Plugin
