--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 GROUP=com.getkeepsafe.dexcount
-VERSION_NAME=0.7.3
+VERSION_NAME=0.7.4-SNAPSHOT
 
 POM_ARTIFACT_ID=dexcount-gradle-plugin
 POM_NAME=Dexcount Gradle Plugin
