--- a/integration/build.gradle
+++ b/integration/build.gradle
@@ -1,6 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-def dexcountVersion = hasProperty('dexcountVersion') ? dexcountVersion : System.env.dexcountVersion
+def dexcountVersion = hasProperty("dexcountVersion") ? dexcountVersion : System.env.dexcountVersion
 
 buildscript {
     repositories {
@@ -10,7 +10,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-alpha3'
+        classpath "com.android.tools.build:gradle:3.0.0-alpha3"
         classpath "com.getkeepsafe.dexcount:dexcount-gradle-plugin:$dexcountVersion"
 
         // NOTE: Do not place your application dependencies here; they belong
