--- a/integration/tests/build.gradle
+++ b/integration/tests/build.gradle
@@ -1,5 +1,5 @@
-apply plugin: 'com.android.test' // A plugin used for test-only-modules
-apply plugin: 'com.getkeepsafe.dexcount'
+apply plugin: "com.android.test" // A plugin used for test-only-modules
+apply plugin: "com.getkeepsafe.dexcount"
 
 android {
     compileSdkVersion 25
@@ -12,21 +12,21 @@ android {
         // The package name of the test app
         testApplicationId "com.getkeepsafe.dexcount.integration.tests"
         // The Instrumentation test runner used to run tests.
-        testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 
     // Set the target app project. The module specified here should contain the production code
     // test should run against.
-    targetProjectPath ':app'
-    targetVariant 'debug'
+    targetProjectPath ":app"
+    targetVariant "debug"
     lintOptions {
         abortOnError false
     }
 }
 
 dependencies {
-    // Android Testing Support Library's runner and rules and hamcrest matchers
-    compile 'com.android.support.test:runner:0.4.1'
-    compile 'com.android.support.test:rules:0.4.1'
-    compile 'org.hamcrest:hamcrest-core:1.3'
+    // Android Testing Support Library"s runner and rules and hamcrest matchers
+    compile "com.android.support.test:runner:0.4.1"
+    compile "com.android.support.test:rules:0.4.1"
+    compile "org.hamcrest:hamcrest-core:1.3"
 }
