--- a/build.gradle
+++ b/build.gradle
@@ -15,19 +15,21 @@
  */
 
 buildscript {
+    apply from: rootProject.file("gradle/versions.gradle")
+
     repositories {
         maven { url "https://plugins.gradle.org/m2/" } // Mirrors jcenter() and mavenCentral()
     }
 
     dependencies {
         // Check for plugin updates
-        classpath "com.github.ben-manes:gradle-versions-plugin:0.12.0"
+        classpath plugs.gradleVersionsPlugin
     }
 }
 
 repositories {
     maven { url "https://plugins.gradle.org/m2/" } // Mirrors jcenter() and mavenCentral()
-    maven { url "https://maven.google.com" }
+    google()
 }
 
 apply plugin: "groovy"
@@ -49,13 +51,13 @@ jar {
 
 dependencies {
     compile gradleApi()
-    compile "com.google.code.gson:gson:2.6.2"
+    compile deps.gson
 
-    compileOnly "com.android.tools.build:gradle:3.0.0-alpha3"
+    compileOnly plugs.gradle
 
-    testCompile "com.android.tools.build:gradle:3.0.0-alpha3"
-    testCompile "junit:junit:4.12"
-    testCompile "org.spockframework:spock-core:1.0-groovy-2.4", { exclude module: "groovy-all" } // Use localGroovy()
+    testCompile plugs.gradle
+    testCompile deps.junit
+    testCompile deps.spockCore, { exclude module: "groovy-all" } // Use localGroovy()
 }
 
 apply from: file("gradle/gradle-mvn-push.gradle")
