--- a/integration/app/build.gradle
+++ b/integration/app/build.gradle
@@ -2,23 +2,25 @@ apply plugin: "com.android.application"
 apply plugin: "com.getkeepsafe.dexcount"
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
 
     publishNonDefault true
 
     defaultConfig {
         applicationId "com.getkeepsafe.dexcount.integration"
-        minSdkVersion 16
-        targetSdkVersion 25
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
     }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
+
         debug {
             minifyEnabled false
         }
@@ -31,7 +33,7 @@ dexcount {
 }
 
 dependencies {
-    compile fileTree(dir: "libs", include: ["*.jar"])
-    testCompile "junit:junit:4.12"
-    compile "com.android.support:appcompat-v7:25.2.0"
+    compile deps.appcompatv7
+
+    testCompile deps.junit
 }
