--- a/integration/build.gradle
+++ b/integration/build.gradle
@@ -1,29 +1,25 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
-def dexcountVersion = hasProperty("dexcountVersion") ? dexcountVersion : System.env.dexcountVersion
+def dexcountVersion = rootProject.hasProperty("dexcountVersion") ? rootProject.property("dexcountVersion") : VERSION_NAME
 
 buildscript {
+    apply from: rootProject.file("../gradle/versions.gradle")
+
     repositories {
         mavenLocal()
-        mavenCentral()
+        maven { url "https://plugins.gradle.org/m2/" } // Mirrors jcenter() and mavenCentral()
         google()
-        jcenter()
     }
 
     dependencies {
-        classpath "com.android.tools.build:gradle:3.0.0-alpha3"
+        classpath plugs.gradle
         classpath "com.getkeepsafe.dexcount:dexcount-gradle-plugin:$dexcountVersion"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
 allprojects {
     repositories {
         mavenLocal()
-        mavenCentral()
-        jcenter()
+        maven { url "https://plugins.gradle.org/m2/" } // Mirrors jcenter() and mavenCentral()
+        google()
     }
 }
 
