turn off java doc lint, turn java and groovy warnings to errors (#198)

--- a/build.gradle
+++ b/build.gradle
@@ -64,7 +64,8 @@ dependencies {
     testCompile deps.spockCore, { exclude module: "groovy-all" } // Use localGroovy()
 }
 
-apply from: file("gradle/gradle-mvn-push.gradle")
+apply from: rootProject.file("gradle/gradle-mvn-push.gradle")
+apply from: rootProject.file("gradle/compile.gradle")
 
 // Compile Kotlin then Groovy
 afterEvaluate {
