--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -4,12 +4,11 @@ ext {
     minSdkVersion = 16
     targetSdkVersion = 25
     compileSdkVersion = 25
-    buildToolsVersion = "25.0.2"
+    buildToolsVersion = "25.0.3"
     sourceCompatibilityVersion = JavaVersion.VERSION_1_7
     targetCompatibilityVersion = JavaVersion.VERSION_1_7
 
     // Common versions
-    supportLibraryVersion = "25.2.0"
     kotlinVersion = "1.1.3-2"
 }
 
@@ -23,16 +22,16 @@ ext.plugs = [
 // Dependencies
 ext.deps = [
         // compile
-        "appcompatv7" : "com.android.support:appcompat-v7:$supportLibraryVersion",
         "kotlinStdlib": "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion",
-        "gson"        : "com.google.code.gson:gson:2.6.2",
-
-        // androidTestCompile
-        "runner"      : "com.android.support.test:runner:0.4.1",
-        "rules"       : "com.android.support.test:rules:0.4.1",
+        "gson"        : "com.google.code.gson:gson:2.8.1",
 
         // testCompile
         "junit"       : "junit:junit:4.12",
         "spockCore"   : "org.spockframework:spock-core:1.1-groovy-2.4",
+
+        // integration - if you change these, you need to update the values in ./.buildscript/test.sh
+        "appcompatv7" : "com.android.support:appcompat-v7:25.2.0",
+        "runner"      : "com.android.support.test:runner:0.4.1",
+        "rules"      : "com.android.support.test:rules:0.4.1",
         "hamcrestCore": "org.hamcrest:hamcrest-core:1.3"
 ]
