convert files from groovy to kotlin (#200)

--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,7 @@ jar {
 
 dependencies {
     implementation localGroovy()
+    implementation deps.kotlinStdlib
     implementation deps.gson
 
     compileOnly plugs.gradle
