--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,11 @@ android:
   components:
     - tools
     - platform-tools
-    - build-tools-25.0.3
-    - android-25
-    - extra-google-m2repository
-    - extra-android-m2repository
+
+before_install:
+  # Install SDK license so Android Gradle plugin can install deps.
+  - mkdir "$ANDROID_HOME/licenses" || true
+  - echo "8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
 
 script:
   - ./.buildscript/test.sh
