Replace modern 'InputDirectory' with 'InputFile' (#218)
Somewhere between Android Studio 3.0 alpha1 and beta6, the AGP API
changed in a few ways.  Notably, the `outputFile` property of variant
outputs is now properly implemented, and the PackageLibraryTask's
archive path now points to an AAR, and not a folder.

We account for both of those changes by updating the modern task such
that it accepts an input file, and not an input directory.

Fixes #217

--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -9,12 +9,12 @@ ext {
     targetCompatibilityVersion = JavaVersion.VERSION_1_7
 
     // Common versions
-    kotlinVersion = "1.1.3-2"
+    kotlinVersion = "1.1.4-3"
 }
 
 // Plugins
 ext.plugs = [
-        "gradle"              : "com.android.tools.build:gradle:3.0.0-alpha3",
+        "gradle"              : "com.android.tools.build:gradle:3.0.0-beta6",
         "kotlinGradlePlugin"  : "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion",
         "gradleVersionsPlugin": "com.github.ben-manes:gradle-versions-plugin:0.15.0"
 ]
