--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,17 @@
 language: android
 
-dist: precise
-
 jdk:
   - oraclejdk8
 
-android:
-  components:
-    - tools
-    - platform-tools
-
 before_install:
-  # Install SDK license so Android Gradle plugin can install deps.
-  - mkdir "$ANDROID_HOME/licenses" || true
-  - echo "8933bad161af4178b1185d1a37fbf41ea5269c55" >  "$ANDROID_HOME/licenses/android-sdk-license"
-  - echo "d56f5187479451eabf01fb78af6dfcb131a6481e" >> "$ANDROID_HOME/licenses/android-sdk-license"
+  # Download SDK
+  - echo yes | sdkmanager "tools" &>/dev/null
+  - echo yes | sdkmanager "platform-tools" &>/dev/null
+  - echo yes | sdkmanager "build-tools;27.0.0" &>/dev/null
+  - echo yes | sdkmanager "platforms;android-27" &>/dev/null
+  # Update remaining dependencies and accept licenses
+  - echo yes | sdkmanager --update &>/dev/null
+  - echo yes | sdkmanager --licenses &>/dev/null
 
 script:
   - ./.buildscript/test.sh
