--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -3,15 +3,14 @@ ext {
     minSdkVersion = 19
     targetSdkVersion = 27
     compileSdkVersion = 27
-    buildToolsVersion = "27.0.0"
-    sourceCompatibilityVersion = JavaVersion.VERSION_1_7
-    targetCompatibilityVersion = JavaVersion.VERSION_1_7
-    kotlinVersion = "1.1.51"
+    buildToolsVersion = "27.0.1"
+    javaVersion = JavaVersion.VERSION_1_7
+    kotlinVersion = "1.1.60"
 }
 
 // Plugins
 ext.plugs = [
-    "gradle"              : "com.android.tools.build:gradle:3.1.0-alpha01",
+    "gradle"              : "com.android.tools.build:gradle:3.1.0-alpha03",
     "kotlinGradlePlugin"  : "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion",
     "gradleVersionsPlugin": "com.github.ben-manes:gradle-versions-plugin:0.17.0"
 ]
