--- a/gradle/compile.gradle
+++ b/gradle/compile.gradle
@@ -1,26 +1,27 @@
-compileJava {
-    sourceCompatibility = project.ext.javaVersion
-    targetCompatibility = project.ext.javaVersion
-
-    // Show all warnings except boot classpath
-    configure(options) {
-        compilerArgs << "-Xlint:-options"       // Turn off "missing" bootclasspath warning
-        encoding = "utf-8"
-        incremental = true
-        fork = true
-    }
-}
-
-compileGroovy {
-    sourceCompatibility = project.ext.javaVersion
-    targetCompatibility = project.ext.javaVersion
+tasks.withType(JavaCompile) {
+    sourceCompatibility = rootProject.ext.javaVersion
+    targetCompatibility = rootProject.ext.javaVersion
 
     // Show all warnings except boot classpath
     configure(options) {
         compilerArgs << "-Xlint:all"            // Turn on all warnings
         compilerArgs << "-Xlint:-options"       // Turn off "missing" bootclasspath warning
         compilerArgs << "-Werror"               // Turn warnings into errors
-        compilerArgs << "-Xdiags:verbose"       // Turn on verbose errors
+        encoding = "utf-8"
+        incremental = true
+        fork = true
+    }
+}
+
+tasks.withType(GroovyCompile) {
+    sourceCompatibility = rootProject.ext.javaVersion
+    targetCompatibility = rootProject.ext.javaVersion
+
+    // Show all warnings except boot classpath
+    configure(options) {
+        compilerArgs << "-Xlint:all"            // Turn on all warnings
+        compilerArgs << "-Xlint:-options"       // Turn off "missing" bootclasspath warning
+        compilerArgs << "-Werror"               // Turn warnings into errors
         encoding = "utf-8"
         incremental = true
         fork = true
@@ -32,7 +33,7 @@ compileGroovy {
     }
 }
 
-test {
+tasks.withType(Test) {
     // Turn on logging for all tests, filter to show failures/skips only
     testLogging {
         exceptionFormat "full"
@@ -41,9 +42,12 @@ test {
         showStackTraces true
         events "failed", "skipped"
     }
+
+    failFast = true
+    maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
 }
 
-javadoc {
+tasks.withType(Javadoc) {
     title = "${project.name} ${project.version}"
     configure(options) {
         header = project.name
@@ -59,7 +63,7 @@ javadoc {
     }
 }
 
-groovydoc {
+tasks.withType(Groovydoc) {
     docTitle = "${project.name} ${project.version}"
     header = project.name
     link("http://docs.oracle.com/javase/8/docs/api/",
