Avoid using deprecated ApkVariant methods in AGP 3.3+ (#261)
The main change here is the addition of the 'ThreeThreeProvider' class,
which configures the method-count tasks in the presence of AGP 3.3+.
All the rest of the changes account for build errors due to updating to
AGP 3.3, and the changes entailed by fixing those errors.

--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ buildscript {
 
     repositories {
         gradlePluginPortal()
+        google()
     }
 
     dependencies {
@@ -85,6 +86,9 @@ apply from: "gradle/gradle-plugin-portal.gradle"
 
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile) {
     kotlinOptions {
-        allWarningsAsErrors = true
+        // Disabling until there's some workaround for the warning
+        // about AGP's builder.jar containing its own bundled Kotlin
+        // runtime library.
+        allWarningsAsErrors = false
     }
 }
