Count declared methods and fields (#271)
* Add the capability to count declared methods and fields in a jar file.

* Add a new parameter to the extension to allow printing the declared method and field count.

* Update the PackageTree data structure to count the referenced and declared methods.

* Print the declared methods and fields in the report when turned on.

* Support the 'java' and 'java-library' plugin. Add a "countDeclaredMethods" task to count methods for jar files.

* Don't print method references and fields in reports for Java projects. The values are always zero and thus redundant.

* Use Javassist to parse class files and don't rely on javap. This not
only removes the dependency to properly setup tools, but also gives
more accurate numbers.

--- a/build.gradle
+++ b/build.gradle
@@ -84,6 +84,7 @@ task createClasspathManifest() {
 dependencies {
     implementation deps.kotlinStdlib
     implementation deps.gson
+    implementation deps.javassist
 
     compileOnly deps.gradle
 
