Better property API usage, also minify in integration tests (#288)
I forgot one input that should be a property.
Realized that I don't need to inject ObjectFactory because tasks have a property reference.
Realized that I could use ConfigurableFileColllection instead of Provider<FileCollection>.
Realized that we weren't minifying in integration tests, and we should.

--- a/integration/app/build.gradle
+++ b/integration/app/build.gradle
@@ -14,11 +14,11 @@ android {
 
     buildTypes {
         debug {
-            minifyEnabled false
+            minifyEnabled true
         }
 
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
     }
