--- a/integration/tests/build.gradle
+++ b/integration/tests/build.gradle
@@ -20,6 +20,12 @@ android {
     lintOptions {
         abortOnError false
     }
+
+    buildTypes {
+        debug {
+            minifyEnabled true
+        }
+    }
 }
 
 dependencies {
