--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 GROUP=com.getkeepsafe.dexcount
-VERSION_NAME=1.0.0
+VERSION_NAME=1.0.1-SNAPSHOT
 
 POM_ARTIFACT_ID=dexcount-gradle-plugin
 POM_NAME=Dexcount Gradle Plugin
