Allow counting of renamed output files (#292)

--- a/integration/app/build.gradle
+++ b/integration/app/build.gradle
@@ -22,6 +22,12 @@ android {
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
     }
+
+    applicationVariants.all { variant ->
+        variant.outputs.all { output ->
+            output.outputFileName = output.outputFileName.replace(".apk", "-it.apk")
+        }
+    }
 }
 
 dexcount {
