--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ buildscript {
     dependencies {
         classpath deps.gradleVersionsPlugin
         classpath deps.kotlinGradlePlugin
+        classpath deps.dokkaGradlePlugin
     }
 }
 
@@ -42,6 +43,7 @@ allprojects {
 
 apply plugin: "com.github.ben-manes.versions"
 apply plugin: "org.jetbrains.kotlin.jvm"
+apply plugin: "org.jetbrains.dokka"
 apply plugin: "groovy"
 apply plugin: "java-gradle-plugin"
 
@@ -56,6 +58,11 @@ jar {
                 "Implementation-Title": POM_ARTIFACT_ID,
                 "Implementation-Version": VERSION_NAME)
     }
+}
+
+dokka {
+    outputFormat = "html"
+    outputDirectory = "${project.buildDir}/dokka"
 }
 
 configurations.all {
@@ -96,7 +103,7 @@ dependencies {
     testImplementation deps.spockCore, { exclude module: "groovy-all" } // Use localGroovy()
 }
 
-apply from: "gradle/gradle-mvn-push.gradle"
+apply from: "gradle/maven-publish.gradle"
 apply from: "gradle/compile.gradle"
 apply from: "gradle/gradle-plugin-portal.gradle"
 
