--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -1,9 +1,27 @@
+/*
+ * Copyright 2019 Benjamin Bader
+ * Copyright 2017 Jared Burrows
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
 // Variables for entire project
 ext {
     minSdkVersion = 19
     targetSdkVersion = 28
     compileSdkVersion = 28
     javaVersion = "1.7"
+    dokkaVersion = "0.10.0"
     kotlinVersion = "1.3.50"
 }
 
@@ -18,6 +36,7 @@ ext.deps = [
             exclude module: 'kotlin-stdlib-jdk8'
         }
     ],
+    "dokkaGradlePlugin"   : "org.jetbrains.dokka:dokka-gradle-plugin:$dokkaVersion",
     "kotlinGradlePlugin"  : "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion",
     "gradleVersionsPlugin": "com.github.ben-manes:gradle-versions-plugin:0.17.0",
 
