--- a/gradle.properties
+++ b/gradle.properties
@@ -13,9 +13,9 @@ POM_SCM_URL=http://github.com/KeepSafe/dexcount-gradle-plugin/
 POM_SCM_CONNECTION=scm:git:git://github.com/KeepSafe/dexcount-gradle-plugin.git
 POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/KeepSafe/dexcount-gradle-plugin.git
 
-POM_LICENSE_NAME=The Apache Software License, Version 2.0
-POM_LICENSE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
-POM_LICENSE_DIST=repo
+POM_LICENCE_NAME=The Apache Software License, Version 2.0
+POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
+POM_LICENCE_DIST=repo
 
 POM_DEVELOPER_ID=keepsafe
 POM_DEVELOPER_NAME=KeepSafe Software, Inc.
