Add AGP 4.1 support (#305)
* Add AGP 4.1 support

* bump to 4.1.0-beta03

* Add kdoc to CountReporter

* Lightly document Styleable and friends

--- a/integration/app/build.gradle
+++ b/integration/app/build.gradle
@@ -10,6 +10,12 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+
+        externalNativeBuild {
+            cmake {
+                cppFlags "-fno-exceptions"
+            }
+        }
     }
 
     buildTypes {
@@ -20,6 +26,13 @@ android {
         release {
             minifyEnabled true
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+        }
+    }
+
+    externalNativeBuild {
+        cmake {
+            version "3.10.2"
+            path "CMakeLists.txt"
         }
     }
 
