--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -20,9 +20,10 @@ ext {
     minSdkVersion = 19
     targetSdkVersion = 28
     compileSdkVersion = 28
-    javaVersion = "1.7"
+    javaVersion = "1.8"
     dokkaVersion = "0.10.0"
     kotlinVersion = "1.3.72"
+    thriftyVersion = "2.1.1"
 }
 
 ext.deps = [
@@ -39,11 +40,13 @@ ext.deps = [
     "dokkaGradlePlugin"   : "org.jetbrains.dokka:dokka-gradle-plugin:$dokkaVersion",
     "kotlinGradlePlugin"  : "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion",
     "gradleVersionsPlugin": "com.github.ben-manes:gradle-versions-plugin:0.17.0",
+    "thriftyGradlePlugin" : "com.microsoft.thrifty:thrifty-gradle-plugin:$thriftyVersion",
 
     // Dependencies
     // compile
     "kotlinStdlib"        : "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion",
     "gson"                : "com.google.code.gson:gson:2.8.2",
+    "thrifty"             : "com.microsoft.thrifty:thrifty-runtime-ktx:$thriftyVersion",
 
     // testCompile
     "junit"               : "junit:junit:4.12",
