--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,9 @@
 // Sets the output JAR filename
 rootProject.name = "dexcount-gradle-plugin"
+
+buildCache {
+    local {
+        directory = new File(rootDir, "build-cache")
+        removeUnusedEntriesAfterDays = 30
+    }
+}
