Add Github CI action (#325)
* Add Github CI action

* hardcode the default branch

--- a/.editorconfig
+++ b/.editorconfig
@@ -19,3 +19,6 @@ insert_final_newline = true
 # Markdown files sometimes need trailing whitespaces.
 [*.md]
 trim_trailing_whitespace = false
+
+[*.yml]
+indent_size = 2
