Multi-AGP version testing, major build-file revamp (#329)
Hat tip to @autonomousapps for providing more than a little inspiration.

At a high level, this PR:
- Adds a new `integrationTest` source-set and configuration
- Moves the existing `integration` project underneath that source set
- Adds TestKit-driven specs to build the integration project under various combinations of AGP and Gradle versions
- Bumps the minimum-supported Gradle version from 5.1 to 6.0
- Bumps the minimum-supported AGP version from 3.0.0 to 3.4.0

Along the way, it also:
- Consolidates the various .gradle files that we'd `apply from:`, centralizing all logic in the one `build.gradle` file
- Removes the legacy plugin-classpath assembly in favor of `GradleRunner#withPluginClasspath()`

Fixes #304

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,8 +22,7 @@ jobs:
           path: |
             ~/.gradle/caches
             ~/.gradle/wrapper
-            build-cache
-            integration/build-cache
+            **/build-cache
           key: ${{ runner.os }}-${{ matrix.jdk }}-gradle-${{ hashFiles('**/*.gradle*') }}
           restore-keys: |
             ${{ runner.os }}-${{ matrix.jdk }}-gradle-
@@ -34,7 +33,9 @@ jobs:
           java-version: ${{ matrix.jdk }}
 
       - name: Build and test
-        run: .buildscript/test.sh
+        uses: eskatos/gradle-command-action@v1
+        with:
+          arguments: check
 
       - name: Deploy snapshot
         if: matrix.jdk == 1.8
