--- a/src/integrationTest/projects/integration/app/build.gradle
+++ b/src/integrationTest/projects/integration/app/build.gradle
@@ -1,5 +1,7 @@
-apply plugin: "com.android.application"
-apply plugin: "com.getkeepsafe.dexcount"
+plugins {
+    id "com.android.application"
+    id "com.getkeepsafe.dexcount"
+}
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
@@ -32,11 +34,12 @@ android {
 
 dexcount {
     verbose = true
+    printVersion = true
     teamCitySlug = project.name
 }
 
 dependencies {
-    implementation deps.appcompatv7
+    implementation "com.android.support:appcompat-v7:28.0.0"
 
-    testImplementation deps.junit
+    testImplementation "junit:junit:4.12"
 }
