--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,8 +38,14 @@ jobs:
           arguments: check
 
       - name: Deploy snapshot
-        if: matrix.jdk == 1.8
-        run: .buildscript/deploy_snapshot.sh
+        uses: eskatos/gradle-command-action@v1
+        with:
+          arguments: uploadArchives
+        if: >-
+          matrix.jdk == 1.8 &&
+          github.event_name == 'push' &&
+          github.repository == 'KeepSafe/dexcount-gradle-plugin' &&
+          github.ref == 'refs/heads/master'
         env:
           SONATYPE_NEXUS_USERNAME: ${{ secrets.SONATYPE_NEXUS_USERNAME }}
           SONATYPE_NEXUS_PASSWORD: ${{ secrets.SONATYPE_NEXUS_PASSWORD }}
